--- a/javafx_common_ui/src/main/resources/jp/co/myms/javafx/fxml/ProgressMonitorDialog.fxml
+++ b/javafx_common_ui/src/main/resources/jp/co/myms/javafx/fxml/ProgressMonitorDialog.fxml
@@ -5,11 +5,17 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.paint.*?>
+<?import javafx.scene.text.*?>
 
 <AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="157.0" prefWidth="540.0" xmlns:fx="http://javafx.com/fxml" fx:controller="jp.co.myms.javafx.dialog.ProgressMonitorController">
   <children>
-    <ProgressBar id="ProgressBar" fx:id="progressBar" prefHeight="21.0" prefWidth="520.0" progress="0.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="40.0" />
+    <ProgressBar id="ProgressBar" fx:id="progressBar" prefHeight="21.0" prefWidth="520.0" progress="0.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="58.0" />
     <Button fx:id="btnCancel" mnemonicParsing="false" onAction="#onSelectedCancel" text="キャンセル" AnchorPane.bottomAnchor="14.0" AnchorPane.rightAnchor="14.0" />
-    <Label fx:id="lblMessage" layoutX="10.0" layoutY="72.0" text="Label" />
+    <Label fx:id="lblMessage" layoutX="14.0" layoutY="88.0" text="Label" />
+    <Label fx:id="lblMainMessage" layoutX="14.0" layoutY="14.0" text="Label">
+      <font>
+        <Font size="18.0" />
+      </font>
+    </Label>
   </children>
 </AnchorPane>
