--- a/javafx_common_ui/src/main/resources/jp/co/myms/javafx/fxml/MessageDialog.fxml
+++ b/javafx_common_ui/src/main/resources/jp/co/myms/javafx/fxml/MessageDialog.fxml
@@ -7,14 +7,34 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane minHeight="100.0" minWidth="300.0" xmlns:fx="http://javafx.com/fxml" fx:controller="jp.co.myms.javafx.dialog.MessageDialogController">
+<AnchorPane minHeight="100.0" minWidth="300.0" prefHeight="205.0" prefWidth="444.0" xmlns:fx="http://javafx.com/fxml" fx:controller="jp.co.myms.javafx.dialog.MessageDialogController">
   <!-- TODO Add Nodes -->
   <children>
-    <HBox id="HBox" fx:id="btnBar" alignment="CENTER" spacing="5.0" AnchorPane.bottomAnchor="14.0" AnchorPane.rightAnchor="14.0" />
-    <Label fx:id="lblDialogMessage" text="test" AnchorPane.bottomAnchor="69.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="40.0" AnchorPane.topAnchor="14.0">
+    <HBox id="HBox" fx:id="btnBar" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" spacing="5.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="43.0" />
+    <Label fx:id="lblDialogMessage" prefHeight="23.0" prefWidth="246.0" text="test" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="14.0">
       <font>
         <Font size="14.0" />
       </font>
     </Label>
+    <Accordion fx:id="accDetail" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="74.0">
+      <expandedPane>
+        <TitledPane fx:id="x1" animated="false" prefWidth="354.0" text="詳細">
+          <content>
+            <ScrollPane id="ScrollPane" minHeight="100.0" minWidth="100.0" prefViewportHeight="105.0" prefViewportWidth="440.0">
+              <content>
+                <AnchorPane id="Content">
+                  <children>
+                    <Label fx:id="lblDetailMessage" text="LabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabel" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="14.0" />
+                  </children>
+                </AnchorPane>
+              </content>
+            </ScrollPane>
+          </content>
+        </TitledPane>
+      </expandedPane>
+      <panes>
+        <fx:reference source="x1" />
+      </panes>
+    </Accordion>
   </children>
 </AnchorPane>
